--- a/src/assets/css/_fonts.scss
+++ b/src/assets/css/_fonts.scss
@@ -28,9 +28,9 @@
   font-weight: 400;
   font-style: normal;
 }
-//@font-face {
-//  font-family: 'Gilroy';
-//  src: url("../fonts/Gilroy-Thin.ttf");
-//  font-weight: 600;
-//  font-style: normal;
-//}
+@font-face {
+  font-family: 'Gilroy';
+  src: url("../fonts/Gilroy-Thin.ttf");
+  font-weight: 600;
+  font-style: normal;
+}
